# CLI-packagelegitmacy-checker

./: .gitignore  CLAUDE.md  README.md  demo_mcp_integration.py  plan.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: pipguard-scan.yml
pipguard/: analyzer.py  cache.py  display.py  github.py  main.py  mcp_server.py  osv.py  pypi.py  scorer.py
tests/: test_regressions.py
