[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipguard"
version = "0.1.0"
description = "Supply chain attack prevention for pip installs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
pipguard = "pipguard.main:app"
