[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipguard-cli"
version = "0.1.3"
description = "Supply chain attack prevention for pip installs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
pipguard = "pipguard.main:app"

[tool.hatch.build.targets.wheel]
packages = ["pipguard"]
